# sway_heap_issue

./: .gitignore  Cargo.toml  Forc.toml  doit.sh
abi/src/: lib.sw
contract/src/: main.sw
script/src/: main.sw
src/: lib.rs
