[package]
name = "rewrite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
fuels = { version = "0.44.0", features = ["fuel-core-lib"] }
tokio = { version = "1.29.1", features = ["full"] }
